[package]
name = "deoxys-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
crossterm = "0.27.0"
ratatui = "0.26.1"
starknet = "0.9.0"
tokio = { version = "1.36.0", features = ["full"] }
